improved remove, fixed layout on small screens

--- a/static/styles.css
+++ b/static/styles.css
@@ -105,6 +105,13 @@ th {
     }
 }
 
+@media only screen and (max-width: 1280px) {
+    #spacer {
+        padding-top: 8rem;
+        padding-bottom: 4rem;
+    }
+}
+
 
 
 .h4 {
